Updated css to fix spacing bug on mobile menu

--- a/assets/css/screen_v=dedafe7ddd.css
+++ b/assets/css/screen_v=dedafe7ddd.css
@@ -1225,7 +1225,7 @@ input::placeholder, textarea::placeholder {
     display: flex;
     max-width: 220px;
     padding-top: 15px;
-    padding-bottom: 50px;
+    /*padding-bottom: 50px;*/
     border-radius: var(--border-radius);
     -webkit-box-shadow: 0 15px 45px -10px rgba(0, 0, 0, .3);
     box-shadow: 0 15px 45px -10px rgba(0, 0, 0, .3);
